WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
96322
[V8] V8PerIsolateData::m_toStringTemplate leaks memory
https://bugs.webkit.org/show_bug.cgi?id=96322
Summary
[V8] V8PerIsolateData::m_toStringTemplate leaks memory
Adam Barth
Reported
2012-09-10 14:43:59 PDT
[V8] V8PerIsolateData::m_toStringTemplate leaks memory
Attachments
Patch
(3.43 KB, patch)
2012-09-10 14:45 PDT
,
Adam Barth
haraken
: review+
abarth
: commit-queue+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Barth
Comment 1
2012-09-10 14:45:20 PDT
Created
attachment 163213
[details]
Patch
Adam Barth
Comment 2
2012-09-10 14:45:50 PDT
This leak is also small (one per thread)
Kentaro Hara
Comment 3
2012-09-10 14:46:38 PDT
Comment on
attachment 163213
[details]
Patch Looks OK
Adam Barth
Comment 4
2012-09-10 16:23:08 PDT
Committed
r128127
: <
http://trac.webkit.org/changeset/128127
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug